@@ -34,6 +34,9 @@ Enhancements since 1.6
 
 - Add MonthDay, useful for birth dates without year
 
+- System clock can now be controlled by applications
+  DateTimeUtils.MillisProvider is now public
+
 - Add static factory method millis() to Duration [2648777]
   This checks for and returns the singleton value for ZERO
 
